profile all styles

--- a/app/blocks/close/close.scss
+++ b/app/blocks/close/close.scss
@@ -35,4 +35,17 @@
     width: 100%;
     height: 100%;
   }
+
+  &_small {
+    width: 36px;
+    height: 36px;
+  }
+
+  &_gray {
+    color: $color-basic;
+
+    &:hover {
+      color: $color-basic-light;
+    }
+  }
 }
