--- a/app/blocks/file/file.pug
+++ b/app/blocks/file/file.pug
@@ -1,5 +1,5 @@
 mixin file()
-  +b.file&attributes(attributes)
+  +b.file&attributes(attributes)(data-file-body)
     +e.text
       block
-    +close._small._gray.__delete
+    +close._small._gray.__delete.js-remove-file
