--- a/app/blocks/loader/loader.scss
+++ b/app/blocks/loader/loader.scss
@@ -5,4 +5,11 @@
 	height: 10px;
 	box-shadow: 10px 10px rgb(223,223,223), -10px 10px rgb(255,149,0), -10px -10px rgb(223,223,223), 10px -10px rgb(255,149,0);
 	animation: cssload-spin ease infinite 4.6s;
+
+	&_small {
+		width: 8px;
+		height: 8px;
+		box-shadow: 8px 8px rgb(223,223,223), -8px 8px rgb(255,149,0), -8px -8px rgb(223,223,223), 8px -8px rgb(255,149,0);
+		animation: cssload-spin8 ease infinite 4.6s;
+	}
 }
