--- a/app/blocks/request-status/request-status.scss
+++ b/app/blocks/request-status/request-status.scss
@@ -70,6 +70,12 @@
     }
   }
 
+  &_light-red {
+    #{$b}__text {
+      background-color: $color-red;
+    }
+  }
+
   &_green {
 
     #{$b}__mark {
