--- a/app/blocks/section/section.scss
+++ b/app/blocks/section/section.scss
@@ -63,6 +63,22 @@
     }
   }
 
+  &_mt-21 {
+    margin-top: -21px;
+
+    @include screen('md') {
+      margin-top: 0;
+    }
+  }
+
+  &_mgb205 {
+    margin-bottom: 205px;
+
+    @include screen('sm') {
+      margin-bottom: 100px;
+    }
+  }
+
   &_inner {
     margin-bottom: 66px;
 
@@ -385,6 +401,14 @@
 
     &_mgb35 {
       margin-bottom: 35px;
+    }
+
+    &_mgb37 {
+      margin-bottom: 37px;
+    }
+
+    &_mgb50 {
+      margin-bottom: 50px;
     }
   }
 
@@ -1187,6 +1211,14 @@
           margin-bottom: 80px;
         }
       }
+    }
+  }
+
+  &__ubo {
+    margin-top: -9px;
+
+    @include screen('md') {
+      margin-top: 0;
     }
   }
 
