--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -193,5 +193,6 @@ include ../components/space-info/space-info
 include ../components/space-offer/space-offer
 include ../components/space-short/space-short
 include ../components/success-message/success-message
+include ../components/ubo-card/ubo-card
 include ../components/ui-kit/ui-kit
 include ../components/user-menu-panel/user-menu-panel
