--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -52,9 +52,12 @@ block content
         +link(href="deal-passport-viewing2.html") SpacePool - Deal Passport Viewing Confimation required GUEST (deal-passport-viewing2.html)
         +link(href="deal-passport-viewing3.html") SpacePool - Deal Passport Viewing Confirmed(deal-passport-viewing3.html)
         +link(href="signup-guest-info.html") Sign Up guest important info (signup-guest-info.html)
-        //- +link(href="profile.html") Profile | Basic account information (profile.html)
-        //- +link(href="profile-company.html") Profile | Company Details (profile-company.html)
-        //- +link(href="profile-kyc.html") Profile | KYC (profile-kyc.html)
+        +link(href="profile.html") Profile | Basic account information (profile.html)
+        +link(href="profile-company.html") Profile | Company Details (profile-company.html)
+        +link(href="profile-kyc.html") Profile | KYC (profile-kyc.html)
+        +link(href="profile-kyc-states1.html") Profile | KYC - all files states and UBO awaiting (profile-kyc-states1.html)
+        +link(href="profile-kyc-states2.html") Profile | KYC - UBO confirmed (profile-kyc-states2.html)
+        +link(href="profile-kyc-states3.html") Profile | KYC - UBO refused (profile-kyc-states3.html)
 
       +page-title._small Попапы
       +e.list
