--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -2918,6 +2918,8 @@ block content
       +ui-section-content
         +ui-description .loader
         +loader
+        +ui-description .loader._small
+        +loader._small
 
 block panels
   +main-menu
