--- a/app/styles/helpers/_animations.scss
+++ b/app/styles/helpers/_animations.scss
@@ -52,3 +52,30 @@
     transform: rotate(360deg);
   }
 }
+
+@keyframes cssload-spin8 {
+  0% {
+    box-shadow: 8px 8px rgb(41, 247, 134), -8px 8px rgb(223, 223, 223), -8px -8px rgb(41, 247, 134), 8px -8px rgb(223, 223, 223);
+    transform: rotate(0deg);
+  }
+
+  25% {
+    box-shadow: -8px 8px rgb(223, 223, 223), -8px -8px rgb(29, 212, 240), 8px -8px rgb(223, 223, 223), 8px 8px rgb(29, 212, 240);
+    transform: rotate(90deg);
+  }
+
+  50% {
+    box-shadow: -8px -8px rgb(235, 69, 51), 8px -8px rgb(223, 223, 223), 8px 8px rgb(235, 69, 51), -8px 8px rgb(223, 223, 223);
+    transform: rotate(180deg);
+  }
+
+  75% {
+    box-shadow: 8px -8px #dfdfdf, 8px 8px #ff9600, -8px 8px #dfdfdf, -8px -8px #ff9600;
+    transform: rotate(270deg);
+  }
+
+  100% {
+    box-shadow: 8px 8px rgb(41, 247, 134), -8px 8px rgb(223, 223, 223), -8px -8px rgb(41, 247, 134), 8px -8px rgb(223, 223, 223);
+    transform: rotate(360deg);
+  }
+}
