--- a/app/blocks/characteristics-table/characteristics-table.scss
+++ b/app/blocks/characteristics-table/characteristics-table.scss
@@ -128,6 +128,10 @@
         color: $color-basic;
       }
 
+      &_darker {
+        color: $color-table-dark;
+      }
+
       &_bold {
         font-weight: 700;
       }
@@ -252,6 +256,12 @@
       &:last-child {
         border-bottom: 1px solid $color-border-gray;
       }
+    }
+  }
+
+  &_wrap.table {
+    tr {
+      flex-wrap: wrap;
     }
   }
 }
