--- a/app/blocks/file-uploader/file-uploader.scss
+++ b/app/blocks/file-uploader/file-uploader.scss
@@ -2,14 +2,40 @@
   $b: &;
 
   display: block;
+  position: relative;
+
+  &__output {
+    display: none;
+
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+
+    #{$b}.is-ready & {
+      display: block;
+    }
+
+    #{$b}.is-loading & {
+      opacity: .4;
+    }
+  }
 
   &__buttons {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+
+    #{$b}.is-loading & {
+      opacity: .4;
+    }
   }
 
   &__label {
+    min-width: 170px;
+
+    @include screen('md') {
+      min-width: 120px;
+    }
 
     .button {
 
@@ -23,6 +49,7 @@
     }
 
     #{$b}.is-ready & {
+      min-width: 0;
       max-width: 60px;
     }
 
@@ -37,9 +64,34 @@
 
   &__button {
     display: none;
+    flex: 1;
+
+    &:not(:first-child) {
+      margin-left: 20px;
+    }
 
     #{$b}.is-ready & {
       display: inline-block;
+    }
+  }
+
+  &__preloader {
+    pointer-events: none;
+    opacity: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 3;
+
+    #{$b}.is-loading & {
+      opacity: 1;
+      pointer-events: auto;
+      cursor: not-allowed;
     }
   }
 }
