--- a/app/blocks/file/file.scss
+++ b/app/blocks/file/file.scss
@@ -1,3 +1,37 @@
 .file {
   $b: &;
+
+  display: block;
+  width: 100%;
+  position: relative;
+  border-bottom: 1px solid $color-form-border;
+  box-sizing: border-box;
+  padding-bottom: 8px;
+  overflow: hidden;
+
+  &:not(:first-child) {
+    margin-top: 18px;
+  }
+
+  &__text {
+    @include text-mid;
+    @include ellipsis(100%);
+
+    box-sizing: border-box;
+    padding-right: 30px;
+
+    @include screen('sm') {
+      @include text15;
+    }
+  }
+
+  &__delete {
+    position: absolute;
+    right: -10px;
+    bottom: 0;
+  }
+
+  &__input {
+    display: none;
+  }
 }
