--- a/app/blocks/files-card/files-card.pug
+++ b/app/blocks/files-card/files-card.pug
@@ -1,5 +1,5 @@
 mixin files-card(data)
-  +b.files-card&attributes(attributes)
+  +b.files-card&attributes(attributes)(data-uploader-status)
     if data.check
       +icon('check').__check
     if data.subtitle
@@ -9,9 +9,9 @@ mixin files-card(data)
     if data.status
       +e.status
         each status in data.status
-          +processing-status(status)
+          +processing-status(status)(class="__status-item" + status.class)
     if data.uploader
-      +file-uploader()(class=data.uploader)
+      +file-uploader()(class=data.uploader + ' __uploader')
     if data.describe
       +e.describe!= data.describe
     block
