--- a/app/blocks/processing-status/processing-status.pug
+++ b/app/blocks/processing-status/processing-status.pug
@@ -2,7 +2,7 @@ mixin processing-status(data)
   +b.processing-status&attributes(attributes)
     if data.note
       +e.note
-        +icon(data.note.icon)(class="__icon" + data.note.icon)
+        +icon(data.note.icon)(class="__icon_" + data.note.icon)
         +e.text!= data.note.text
     if data.status
       +request-status-simple._up._fz17._bold(class=data.status.class + ' __status')!= data.status.text
