--- a/app/pages/profile/profile-kyc.pug
+++ b/app/pages/profile/profile-kyc.pug
@@ -31,42 +31,42 @@ block content
                 +b.A.link_light-underline._mark.__link.is-select(href="#" data-select-value)
                   +e.SPAN.text KYC
                   +indicator._sm-small.__marker 1
-          +section
-            +section-header
+          +section._mt-21._mgb205
+            +section-header._mgb50
               +e.text_fz14._gray Provide information about your company. All images must be of sufficient resolution and quality to ensure that the information is legible and not misread.
             +section-content
               +grid.grid_big.grid_int59
                 +col({xl: 4, sm: 12})
-                  +files-card({check: true, subtitle: 'Upload', title: 'Identity proof', uploader: 'is-ready', describe: 'Document should refer to the individual duly empowered to act on behalf of the legal entity. ID card: Front AND Back (Valid) OR Passport (Valid)'})
+                  +files-card({check: true, subtitle: 'Upload', title: 'Identity proof', uploader: ' ', describe: 'Document should refer to the individual duly empowered to act on behalf of the legal entity. ID card: Front AND Back (Valid) OR Passport (Valid)', status: [{class: '_awaiting', note: {icon: 'clock', text: "Files successfully sent"}, status: {class: '_orange', text: 'AWAITING CONFIRMATION'}}, {class: '_refused', status: {class: '_light-red', text: 'REFUSED'}, reason: 'Reason: Information is Unreadable. Please provide readable scan of your Articles of association'}, {class: '_confirmed', note: {icon: 'round-check', text: 'Files successfully checked'}, status: {class: '_dark-green', text: 'CONFIRMED'}}]})
                 +col({xl: 4, sm: 12})
-                  +files-card({check: true, subtitle: 'Upload', title: 'Articles of Association', uploader: ' ', describe: 'Certified articles of association (Statute) - formal memorandum stated by the entrepreneurs, in which the following information is mentioned: business name, activity, registered address, shareholding…'})
+                  +files-card({check: true, subtitle: 'Upload', title: 'Articles of Association', uploader: ' ', describe: 'Certified articles of association (Statute) - formal memorandum stated by the entrepreneurs, in which the following information is mentioned: business name, activity, registered address, shareholding…', status: [{class: '_awaiting', note: {icon: 'clock', text: "Files successfully sent"}, status: {class: '_orange', text: 'AWAITING CONFIRMATION'}}, {class: '_refused', status: {class: '_light-red', text: 'REFUSED'}, reason: 'Reason: Information is Unreadable. Please provide readable scan of your Articles of association'}, {class: '_confirmed', note: {icon: 'round-check', text: 'Files successfully checked'}, status: {class: '_dark-green', text: 'CONFIRMED'}}]})
                 +col({xl: 4, sm: 12})
-                  +files-card({check: true, subtitle: 'Upload', title: 'Registration Proof', uploader: ' ', describe: 'Extract from the Company Register issued within the last three months'})
+                  +files-card({check: true, subtitle: 'Upload', title: 'Registration Proof', uploader: ' ', describe: 'Extract from the Company Register issued within the last three months', status: [{class: '_awaiting', note: {icon: 'clock', text: "Files successfully sent"}, status: {class: '_orange', text: 'AWAITING CONFIRMATION'}}, {class: '_refused', status: {class: '_light-red', text: 'REFUSED'}, reason: 'Reason: Information is Unreadable. Please provide readable scan of your Articles of association'}, {class: '_confirmed', note: {icon: 'round-check', text: 'Files successfully checked'}, status: {class: '_dark-green', text: 'CONFIRMED'}}]})
           +section
-            +section-header
+            +section-header._mgb37
               +e.text_fz14._gray You must add information about <b>at least one</b> Ultimate Beneficial Owner (UBO) - Maximum 4 UBO’s
             +section-content
               +form._pb._negative-mg.js-form-with-hidden-panel(data-validated-form)
-                +form-section._mg90
+                +form-section._sm-mg(data-ubo-element)
                   +form-section-header._mg67
                     +form-section-title._fz24 UBO <span data-ubo-number>1<span> (Ultimate Beneficial Owner)
                   +grid.grid_big.grid_int59.grid_c9
                     +col({xl: 4, md:9 })
                       +form-section-wrapper
                         +form-box('First name')
-                          +input(type="text" name="firstName[1]" value="Eugene" placeholder="First name")
+                          +input(type="text" name="ubo-1[firstName]" value="Eugene" placeholder="First name")
                     +col({xl: 5, md:9 })
                       +form-section-wrapper
                         +form-box('Last name')
-                          +input(type="text" name="lastName[1]" value="Sheeleen" placeholder="Last name")
+                          +input(type="text" name="ubo-1[lastName]" value="Sheeleen" placeholder="Last name")
                     +col({xl: 2, md:4, sm: 9 })
                       +form-section-wrapper
                         +form-box('Date of birth', 'calendar2')._icon
-                          +input.js-datepicker(type="text" name="birthDate[1]" placeholder="Date of birth" readonly="readonly")
+                          +input.js-datepicker(type="text" name="ubo-1[birthDate]" placeholder="Date of birth" readonly="readonly")
                     +col({xl: 2, md:5, sm: 9 })
                       +form-section-wrapper
                         +form-box('Nationality')
-                          +select.js-select-input(name="nationality[1]")
+                          +select.js-select-input(name="ubo-1[nationality]")
                             option(value="" placeholder) Nationality
                             option(value="eng") English
                             option(value="rus") Russians
@@ -75,7 +75,7 @@ block content
                     +col({xl: 2, md:4, sm: 9 })
                       +form-section-wrapper
                         +form-box('Birthplace country')
-                          +select.js-select-input(name="birthplaceCountry[1]")
+                          +select.js-select-input(name="ubo-1[birthplaceCountry]")
                             option(value="" placeholder) Birthplace country
                             option(value="lv") Latvia
                             option(value="ru") Russia
@@ -84,19 +84,19 @@ block content
                     +col({xl: 3, md:5, sm: 9 })
                       +form-section-wrapper
                         +form-box('Birthplace city')
-                          +input(type="text" name="birthplaceCity[1]" placeholder="Birthplace city")
+                          +input(type="text" name="ubo-1[birthplaceCity]" placeholder="Birthplace city")
                     +col({xl: 4, md:9 })
                       +form-section-wrapper
                         +form-box('Legal Adress Line 1')
-                          +input(type="text" name="legalAdressL1[1]" placeholder="Legal Adress Line 1")
+                          +input(type="text" name="ubo-1[legalAdressL1]" placeholder="Legal Adress Line 1")
                     +col({xl: 5, md:9 })
                       +form-section-wrapper
                         +form-box('Legal Adress Line 2')
-                          +input(type="text" name="legalAdressL2[1]" placeholder="Legal Adress Line 2")
+                          +input(type="text" name="ubo-1[legalAdressL2]" placeholder="Legal Adress Line 2")
                     +col({xl: 4, md:9 })
                       +form-section-wrapper
                         +form-box('Country')
-                          +select.js-select-input(name="country[1]")
+                          +select.js-select-input(name="ubo-1[country]")
                             option(value="" placeholder) Country
                             option(value="lv") Latvia
                             option(value="ru") Russia
@@ -105,23 +105,23 @@ block content
                     +col({xl: 5, md:9 })
                       +form-section-wrapper
                         +form-box('City')
-                          +input(type="text" name="city[1]" placeholder="City")
+                          +input(type="text" name="ubo-1[city]" placeholder="City")
                     +col({xl: 4, md:9 })
                       +form-section-wrapper
                         +form-box('Borough')
-                          +input(type="text" name="borough[1]" placeholder="Borough")
+                          +input(type="text" name="ubo-1[borough]" placeholder="Borough")
                     +col({xl: 5, md:9 })
                       +form-section-wrapper
                         +form-box('Postcode')
-                          +input(type="text" name="postCode[1]" placeholder="Postcode")
+                          +input(type="text" name="ubo-1[postCode]" placeholder="Postcode")
                 +form-section._mg90
                   +grid.grid_big.grid_int59.grid_c9
                     +col({xl: 4, md:9 })
-                      +form-section-wrapper
-                        +link-icon('plus-thin')._underline._bold._icon_right._icon_right_pr50._no-shadow.__link Add one more UBO
+                      +form-section-wrapper._aie._h100p
+                        +link-icon('plus-thin')._underline._bold._icon_right._icon_right_pr50._no-shadow.__link_fz25 Add one more UBO
                     +col({xl: 5, md:9 })
-                      +form-section-wrapper
-                        +button('button')._short.__button(type="submit") Send UBO Statement
+                      +form-section-wrapper._aie._h100p
+                        +button('button')._short._wide.__button_mxw368(type="submit") Send UBO Statement
 
 
 
