--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -169,6 +169,7 @@ $color-step-active: #2a3037;
 $color-tab-disabled: #a1a5ab;
 $color-compose-text: #a6aab3;
 $color-star-gray: #bcc6ca;
+$color-table-dark: #181c22;
 
 // ##########
 // Transitions
