--- a/app/pages/profile/profile-company.pug
+++ b/app/pages/profile/profile-company.pug
@@ -16,20 +16,20 @@ block content
         +content-column-main
           +filter-select.__filter.js-offer-select
             +filter-select-head.hide-from-sm
-              +filter-select-label.color-radio_full._dark._fz25._sm-noundr
-                div.color-radio__content Company details
+              +filter-select-label.link.filter-select__link
+                span.link__text Company details
             +filter-select-dropdown
               +filter-select-header.hide-from-sm Settings
               +filter-select-item._mr56
-                +b.A.link_light-underline._mark.__link(href="#" data-select-value)
-                  +e.SPAN.text Basic account information
+                +b.A.link_light-underline._mark.__link(href="#" data-offer-link)
+                  +e.SPAN.text(data-select-value) Basic account information
               +filter-select-item._mr56
-                +b.A.link_light-underline._mark.__link.is-select(href="#" data-select-value)
-                  +e.SPAN.text Company details
+                +b.A.link_light-underline._mark.__link.is-select(href="#" data-offer-link)
+                  +e.SPAN.text(data-select-value) Company details
                   +indicator._sm-small.__marker 1
               +filter-select-item._mr56
-                +b.A.link_light-underline._mark.is-new.__link(href="#" data-select-value)
-                  +e.SPAN.text KYC
+                +b.A.link_light-underline._mark.is-new.__link(href="#" data-offer-link)
+                  +e.SPAN.text(data-select-value) KYC
                   +indicator._sm-small.__marker 1
           +form._pb._negative-mg.js-form-with-hidden-panel(data-validated-form)
             +form-section._mg90
