--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -341,6 +341,9 @@ block content
           +button()(href="#")._blue._border .button_blue._border
           +button()(href="#")._green .button_green
           +button()(href="#")._green._border .button_green._border
+        +ui-description Кнопки с лоадером
+          +button('', true)(href="#").is-loading .button.is-loading
+          +button('', true)(href="#")._border.is-loading .button_border.is-loading
         +ui-description При клике на .js-anchor происходит скролл к элементу из атрибута href. Блок: blocks/js-functions/anchor.js
         +button()(href="#section0").js-anchor .js-anchor
         +ui-description При клике на .js-freeze скролл страницы блокируется, на .js-unfreeze разблокируется. Блок: blocks/js-functions/freeze.js. Функции freeze() и unfreeze() можно импортировать и использовать в модалках, бургере или где-то еще
