--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -45,8 +45,31 @@
     }
   }
 
+  &.is-loading {
+    cursor: not-allowed;
+    pointer-events: none;
+    color: transparent;
+  }
+
   &:hover::before,&.is-active::before {
     opacity: .2;
+  }
+
+  &__preloader {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    pointer-events: none;
+    z-index: 3;
+
+    #{$b}.is-loading & {
+      display: flex;
+    }
   }
 
   &__text {
