--- a/app/pages/profile/profile-kyc.pug
+++ b/app/pages/profile/profile-kyc.pug
@@ -16,20 +16,20 @@ block content
         +content-column-main
           +filter-select.__filter.js-offer-select
             +filter-select-head.hide-from-sm
-              +filter-select-label.color-radio_full._dark._fz25._sm-noundr
-                div.color-radio__content KYC
+              +filter-select-label.link.filter-select__link
+                span.link__text KYC
             +filter-select-dropdown
               +filter-select-header.hide-from-sm Settings
               +filter-select-item._mr56
-                +b.A.link_light-underline._mark.__link(href="#" data-select-value)
-                  +e.SPAN.text Basic account information
+                +b.A.link_light-underline._mark.__link(href="#" data-offer-link)
+                  +e.SPAN.text(data-select-value) Basic account information
               +filter-select-item._mr56
-                +b.A.link_light-underline._mark.__link.is-new(href="#" data-select-value)
-                  +e.SPAN.text Company details
+                +b.A.link_light-underline._mark.__link.is-new(href="#" data-offer-link)
+                  +e.SPAN.text(data-select-value) Company details
                   +indicator._sm-small.__marker 1
               +filter-select-item._mr56
-                +b.A.link_light-underline._mark.__link.is-select(href="#" data-select-value)
-                  +e.SPAN.text KYC
+                +b.A.link_light-underline._mark.__link.is-select(href="#"  data-offer-link)
+                  +e.SPAN.text(data-select-value) KYC
                   +indicator._sm-small.__marker 1
           +section._mt-21._mgb205
             +section-header._mgb50
@@ -49,7 +49,7 @@ block content
               +form._pb._negative-mg.js-form-with-hidden-panel(data-validated-form)
                 +form-section._sm-mg(data-ubo-element)
                   +form-section-header._mg67
-                    +form-section-title._fz24 UBO <span data-ubo-number>1<span> (Ultimate Beneficial Owner)
+                    +form-section-title._fz24 UBO <span data-ubo-number>1</span> (Ultimate Beneficial Owner)
                   +grid.grid_big.grid_int59.grid_c9
                     +col({xl: 4, md:9 })
                       +form-section-wrapper
@@ -118,10 +118,10 @@ block content
                   +grid.grid_big.grid_int59.grid_c9
                     +col({xl: 4, md:9 })
                       +form-section-wrapper._aie._h100p
-                        +link-icon('plus-thin')._underline._bold._icon_right._icon_right_pr50._no-shadow.__link_fz25 Add one more UBO
+                        +link-icon('plus-thin')._underline._bold._icon_right._icon_right_pr50._no-shadow.__link_fz25.js-add-ubo(href="#" data-url-template="assets/data/templates.json" data-max-ubo-count="4") Add one more UBO
                     +col({xl: 5, md:9 })
                       +form-section-wrapper._aie._h100p
-                        +button('button')._short._wide.__button_mxw368(type="submit") Send UBO Statement
+                        +button('button', true)._short._wide.__button_mxw368(type="submit") Send UBO Statement
 
 
 
