--- a/app/blocks/popups/popups.scss
+++ b/app/blocks/popups/popups.scss
@@ -293,6 +293,20 @@
     }
   }
 
+  &__type {
+    @include text24;
+
+    display: inline-block;
+    text-transform: uppercase;
+    font-weight: 900;
+
+    @include screen('sm') {
+      @include text15;
+
+      line-height: (13 / 15);
+    }
+  }
+
   &__title {
     @include heading-3;
 
