--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -185,6 +185,7 @@ include ../components/popup-reminder-empty/popup-reminder-empty
 include ../components/popup-reminder-save/popup-reminder-save
 include ../components/popup-signin/popup-signin
 include ../components/popup-subscribe/popup-subscribe
+include ../components/popup-warning/popup-warning
 include ../components/results/results
 include ../components/search-filter/search-filter
 include ../components/search-map/search-map
