--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -82,6 +82,7 @@ block content
         +link.js-popup(href="#popup-reminder-empty") Popup empty terms and conditions
         +link(href="#popup-reminder-save").js-popup Popup save terms and conditions
         +link(href="#popup-payment-form").js-popup-top Popup payment form
+        +link(href="#popup-warning").js-popup Popup warning
 
 block panels
   +main-menu
@@ -120,3 +121,4 @@ block popups
   +popup-reminder-empty#popup-reminder-empty
   +popup-reminder-save#popup-reminder-save
   +popup-payment-form#popup-payment-form
+  +popup-warning#popup-warning
