--- a/app/components/popup-reminder-empty/popup-reminder-empty.pug
+++ b/app/components/popup-reminder-empty/popup-reminder-empty.pug
@@ -21,7 +21,7 @@ mixin popup-reminder-empty()
         p Please choose an option in order to continue:
       +e.buttons
         +button('button')._short._border._border_bg-white._mob-smaller.__button(type="button" data-composite-disable)
-          span.hide-sm Continue without <span data-popup-element="offerHD">Hot desks</span><span data-popup-element="offerFD" class="hide">Fixed desks</span><span data-popup-element="offerMR" class="hide">Meeting rooms</span><span data-popup-element="offerOS">Office spaces</span> offers
+          span.hide-sm Continue without <span data-popup-element="offerHD">Hot desks</span><span data-popup-element="offerFD" class="hide">Fixed desks</span><span data-popup-element="offerMR" class="hide">Meeting rooms</span><span data-popup-element="offerOS" class="hide">Office spaces</span> offers
           span.hide-from-sm Continue without <span data-popup-element="offerHD">HOT DESKS</span><span data-popup-element="offerFD" class="hide">FIXED DESKS</span><span data-popup-element="offerMR" class="hide">MEETING ROOMS</span><span data-popup-element="offerOS" class="hide">OFFICE SPACES</span>
         +button('button')._short._mob-smaller.__button(type="button" data-composite-return)
           span.hide-sm Add Terms and Conditions
