--- a/app/pages/space/space.pug
+++ b/app/pages/space/space.pug
@@ -78,8 +78,8 @@ block content
                     +e.status
                       +e.buttons
                         +button-heart._gray._small.__button._heart.js-heart.hide-sm
-                        +button('a')._thin-border._thin-border_smaller._smaller.__button(href="#") Arrange a viewing
-                        +button('a')._smaller.__button(href="#") Request Reservation
+                        +button('a')._thin-border._thin-border_smaller._smaller.__button(href="#some") Arrange a viewing
+                        +button('a')._smaller.__button(href="#some") Request Reservation
                       +e.available AVIALABLE NOW
                     +content-zone._small.__content
                       h4 Hot desk with Workshops Floor 6
