--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -1405,6 +1405,15 @@
     }
   }
 
+  &__field {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    width: 100%;
+  }
+
   &__count {
     flex: 2.35;
 
