--- a/app/components/pivot-table/pivot-table.pug
+++ b/app/components/pivot-table/pivot-table.pug
@@ -8,11 +8,11 @@ mixin pivot-table()
           +col({xl: 6, sm:12 })
             +form-section-wrapper
               +form-box('Rent start date:', 'calendar2')._icon
-                +input.js-datepicker(type="text" name="startDate" value="29 October 2018" placeholder="Rent start date:")
+                +input.js-datepicker(type="text" name="startDate" value="29 October 2019" placeholder="Rent start date:" data-period-start="rent")
           +col({xl: 6, sm:12 })
             +form-section-wrapper
               +form-box('Rent end date:', 'calendar2')._icon
-                +input.js-datepicker(type="text" name="endDate" value="29 October 2019" placeholder="Rent end date:")
+                +input.js-datepicker(type="text" name="endDate" value="29 October 2020" placeholder="Rent end date:" data-period-end="rent" data-mindate="2019-10-29")
       +characteristics-table._normal._large._dark._pivot.__table
         body
           +e.TR.row
