--- a/app/pages/profile/profile-company.pug
+++ b/app/pages/profile/profile-company.pug
@@ -89,7 +89,7 @@ block content
                 +col({xl: 4, md:9 })
                   +form-section-wrapper
                     +form-box('Date of birth', 'calendar2')._icon
-                      +input.js-datepicker(type="text" name="birthDate" placeholder="Date of birth" readonly="readonly")
+                      +input.js-datepicker(type="text" name="birthDate" placeholder="Date of birth" readonly="readonly" data-mindate='')
                 +col({xl: 2, md:4, sm: 9 })
                   +form-section-wrapper
                     +form-box('Nationality')
