--- a/app/pages/signup-host-info/signup-host-info.pug
+++ b/app/pages/signup-host-info/signup-host-info.pug
@@ -100,7 +100,7 @@ block content
                 +col({xl: 6, md:12 })
                   +form-section-wrapper
                     +form-box('Date of birth', 'calendar2')._icon
-                      +input.js-datepicker(type="text" name="birthDate" placeholder="Date of birth" readonly="readonly")
+                      +input.js-datepicker(type="text" name="birthDate" placeholder="Date of birth" readonly="readonly"  data-mindate='')
                 +col({xl: 3, md:6, sm: 12 })
                   +form-section-wrapper
                     +form-box('Nationality')
