--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -320,6 +320,7 @@
   border-radius: 0;
   transition: opacity $ease-main, transform $ease-main, left 0s $ease-main;
   font-family: $font-main;
+  z-index: 10;
 
   &.-from-bottom- {
     transform: translateY(8px);
